Let url wrap. Bug: 8043

--- a/kronolith/themes/screen.css
+++ b/kronolith/themes/screen.css
@@ -399,6 +399,7 @@ table#calendar-list th.sortdown {
     overflow: auto;
     padding: 2px;
     font-size: 90%;
+    word-wrap: break-word;
 }
 .calendar-list-icon {
     width: 1%;
